syntax = "proto3";

option csharp_namespace = "Validator";

package Validator;

service Validate {
  rpc ValidateMessage (MessageMetaData) returns (ValidatorReply);
}

message MessageMetaData {
	string clientID = 1;
	string apiKey = 2;
	string tag = 3;
}

message ValidatorReply {
  string replyCode = 1;
  int32 accountPriority = 2;
}
